--- a/.travis.yml
+++ b/.travis.yml
@@ -4,18 +4,12 @@ language: python
 env:
   - PYTHONPATH=`pwd`
 
-python:
-  - '2.7'
-  - '3.5'
-  - '3.6'
-  - '3.6-dev'
-  - '3.7-dev'
-  - 'nightly'
+python: '3.7.2'
 
 install:
   - pip install -r requirements.txt
 
-script: paver test
+script: paver run parallel
 
 notifications:
   slack:
